Revert "chore: add plugin to opt-out live binding (#11046)"
This reverts commit b842d2ee8687aa2c39200eef66aeb5b7345353fe.

--- a/packages/mask/.webpack/tsconfig.json
+++ b/packages/mask/.webpack/tsconfig.json
@@ -4,5 +4,14 @@
     "incremental": false,
     "composite": false
   },
-  "include": ["./*.ts"]
+  "files": [
+    "./clean-hmr.ts",
+    "./config.ts",
+    "./fix-regenerator-runtime.ts",
+    "./flags.ts",
+    "./git-info.ts",
+    "./manifest.ts",
+    "./utils.ts",
+    "./webpack.config.ts"
+  ]
 }
