chore: add wagmi sdk (#11017)
* chore: add wagmi sdk

* chore: impl wagmi

* chore: debug

* fix: pkg

* chore: impl mm & wc connector

* fix: build errors

* refactor: code stlye

* fix: runtime build

* chore: update lock file

* fix: lint error

* chore: code style

* refactor: adjust classes

* chore: flags

* refactor: rename wc v2

* chore: remove wagmi

* fix: proposal namespaces

* fix: lock file

* fix: unit tests

--- a/packages/injected-script/sdk/tsconfig.json
+++ b/packages/injected-script/sdk/tsconfig.json
@@ -8,13 +8,14 @@
   "files": [
     "index.ts",
     "Base.ts",
+    "BaseInjected.ts",
     "Browser.ts",
     "Phantom.ts",
     "Solflare.ts",
     "Coin98.ts",
     "Coinbase.ts",
-    "OKX.ts",
     "MetaMask.ts",
+    "OKX.ts",
     "Opera.ts",
     "Clover.ts",
     "utils.ts"
