--- a/packages/injected-script/package.json
+++ b/packages/injected-script/package.json
@@ -22,7 +22,11 @@
     "start": "rollup -c -w"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-replace": "^5.0.2",
     "rollup": "^3.28.1",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-swc3": "^0.10.1"
   }
 }
