refactor: move files

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -5,6 +5,9 @@
     "./background/initialization/",
     "./background/tasks/",
     "./content-script",
+    "./content-script/site-adaptor-infra/sandboxed-plugin.ts",
+    "./content-script/site-adaptors/",
+    "./content-script/index.ts",
     "./dashboard/initialization/",
     "./devtools",
     "./entry-sdk/",
