refactor: move files

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -2,18 +2,18 @@
   "name": "@masknet/extension",
   "private": true,
   "sideEffects": [
-    "./background/initialization/",
-    "./background/tasks/",
+    "./background/initialization/**",
+    "./background/tasks/**",
     "./content-script/site-adaptor-infra/sandboxed-plugin.ts",
-    "./content-script/site-adaptors/",
+    "./content-script/site-adaptors/**",
     "./content-script/index.ts",
-    "./dashboard/initialization/",
-    "./devtools",
-    "./entry-sdk/",
-    "./popups/initialization/",
+    "./dashboard/initialization/**",
+    "./devtools/**",
+    "./entry-sdk/**",
+    "./popups/initialization/**",
     "./shared/plugin-infra/register.js",
-    "./shared-ui/initialization/",
-    "./web-workers/"
+    "./shared-ui/initialization/**",
+    "./web-workers/**"
   ],
   "license": "AGPL-3.0-or-later",
   "type": "module",
