refactor: move files

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -5,7 +5,12 @@
     "./background/initialization/**",
     "./background/tasks/**",
     "./content-script/site-adaptor-infra/sandboxed-plugin.ts",
-    "./content-script/site-adaptors/**",
+    "./content-script/site-adaptors/index.ts",
+    "./content-script/site-adaptors/facebook.com/index.ts",
+    "./content-script/site-adaptors/instagram.com/index.ts",
+    "./content-script/site-adaptors/minds.com/index.ts",
+    "./content-script/site-adaptors/mirror.xyz/index.ts",
+    "./content-script/site-adaptors/twitter.com/index.ts",
     "./content-script/index.ts",
     "./dashboard/initialization/**",
     "./devtools/**",
