--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,8 +68,8 @@
       "@masknet/flags/build-info": ["./packages/flags/src/flags/buildInfo.ts"],
       "@masknet/gun-utils": ["./packages/gun-utils/src/index.ts"],
       "@masknet/injected-script": ["./packages/injected-script/sdk/index.ts"],
-      "@masknet/mask-sdk": ["./packages/mask-sdk/server/index.ts"],
-      "@masknet/mask-sdk/shared": ["./packages/mask-sdk/shared/index.ts"],
+      "@masknet/sdk": ["./packages/mask-sdk/server/index.ts"],
+      "@masknet/sdk/shared": ["./packages/mask-sdk/shared/index.ts"],
       "@masknet/plugin-infra/dom": ["./packages/plugin-infra/src/entry-dom.ts"],
       "@masknet/plugin-infra/dom/context": ["./packages/plugin-infra/src/dom/context.ts"],
       "@masknet/plugin-infra/background-worker": ["./packages/plugin-infra/src/entry-background-worker.ts"],
