refactor: move files

--- a/packages/mask/background/tsconfig.json
+++ b/packages/mask/background/tsconfig.json
@@ -9,7 +9,7 @@
     // but we cannot build the same code in two env
     "lib": ["ES2022", "WebWorker", "DOM.Iterable"]
   },
-  "include": ["./"],
+  "include": ["./", "./env.d.ts"],
   "references": [
     { "path": "../shared/tsconfig.json" },
     { "path": "../utils-pure/tsconfig.json" },
