--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -49,6 +49,7 @@
     "qrcode": "^1.5.3",
     "react-hook-form": "^7.45.2",
     "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.14.2",
     "react-use": "^17.4.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
