--- a/packages/web3-contracts/package.json
+++ b/packages/web3-contracts/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "commonjs",
   "scripts": {
-    "start": "ts-node compile-contracts.ts"
+    "start": "node -r @swc-node/register compile-contracts.ts"
   },
   "dependencies": {
     "@typechain/web3-v1": "^6.0.2",
