[Release] Hotfix 2.23.9 => 2.23.10 (patch) (#11122)
* [Release] Hotfix 2.23.9 => 2.23.10 （patch）

* feat: upgrade lens (#11124)

* chore: pick commit

* chore: build error

* chore: revert test code

* fix: mf-5473 lower spam score (#10965)

* fix: bugfix for lens (#11132)

* feat: lens sign less api (#11133)

* fix: unit test (#11139)

* fix: canParse

* Update setups/index.ts

* fix: threads

* refactor: remove patch

---------

Co-authored-by: Jack Works <jackworks@protonmail.com>
Co-authored-by: guanbinrui <guanbinrui@dimension.im>
Co-authored-by: guanbinrui <52657989+guanbinrui@users.noreply.github.com>

---------

Co-authored-by: guanbinrui <guanbinrui@gmail.com>
Co-authored-by: nuanyang233 <nuanyang233@gmail.com>
Co-authored-by: UncleBill <billbill290@gmail.com>
Co-authored-by: Jack Works <jackworks@protonmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "yarn": ">=999.0.0",
     "npm": ">=999.0.0"
   },
-  "version": "2.23.9",
+  "version": "2.23.10",
   "private": true,
   "license": "AGPL-3.0-or-later",
   "scripts": {
@@ -24,7 +24,7 @@
     "lint:ci-report": "pnpm run lint:ci --format=junit --output-file=reports/junit/eslint-results.xml --max-warnings=0",
     "prepare": "husky install",
     "svgo": "svgo packages/icons/*/*.svg",
-    "test": "vitest",
+    "test": "vitest --no-threads",
     "spellcheck": "cspell lint --no-must-find-files",
     "clean": "npx gulp clean"
   },
