refactor: improve tsconfig

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.leaf.json",
   "compilerOptions": {
     "rootDir": "./src/",
-    "outDir": "./dist/src",
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["./src"],
