--- a/packages/mask/content-script/tsconfig.json
+++ b/packages/mask/content-script/tsconfig.json
@@ -1,10 +1,8 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../tsconfig.leaf.json",
   "compilerOptions": {
     "rootDir": "./",
-    "outDir": "../dist/src/",
-    "tsBuildInfoFile": "../dist/legacy.tsbuildinfo",
-    "emitDeclarationOnly": true
+    "tsBuildInfoFile": "../dist/legacy.tsbuildinfo"
   },
   "include": ["./", "./**/*.json"],
   "references": [
@@ -34,7 +32,6 @@
     { "path": "../background/tsconfig.json" },
     { "path": "../shared/tsconfig.json" },
     { "path": "../shared-ui/tsconfig.json" },
-    { "path": "../dashboard/tsconfig.json" },
     { "path": "../../types/tsconfig.json" },
     { "path": "../entry-sdk/tsconfig.json" }
   ]
