--- a/packages/mask/shared-ui/tsconfig.json
+++ b/packages/mask/shared-ui/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "rootDir": "./",
     "outDir": "../dist/shared-ui/",
-    "tsBuildInfoFile": "../dist/shared-ui.tsbuildinfo",
-    "emitDeclarationOnly": true
+    "tsBuildInfoFile": "../dist/shared-ui.tsbuildinfo"
   },
   "include": ["./", "./**/*.json"],
   "references": [
