--- a/packages/mask/utils-pure/tsconfig.json
+++ b/packages/mask/utils-pure/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "rootDir": "./",
     "outDir": "../dist/utils-pure/",
-    "tsBuildInfoFile": "../dist/utils-pure.tsbuildinfo",
-    "emitDeclarationOnly": true
+    "tsBuildInfoFile": "../dist/utils-pure.tsbuildinfo"
   },
   "include": ["./"],
   "references": [{ "path": "../../shared-base/tsconfig.json" }]
