--- a/packages/injected-script/main/tsconfig.json
+++ b/packages/injected-script/main/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../tsconfig.leaf.json",
   "compilerOptions": {
     "rootDir": "./",
-    "outDir": "../dist/main",
     "tsBuildInfoFile": "../dist/main.tsbuildinfo"
   },
   "include": ["./"],
