--- a/packages/mask/devtools/tsconfig.json
+++ b/packages/mask/devtools/tsconfig.json
@@ -1,10 +1,8 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../tsconfig.leaf.json",
   "compilerOptions": {
     "rootDir": "./",
-    "outDir": "../dist/devtools/",
-    "tsBuildInfoFile": "../dist/devtools.tsbuildinfo",
-    "emitDeclarationOnly": true
+    "tsBuildInfoFile": "../dist/devtools.tsbuildinfo"
   },
   "include": ["./"],
   "references": [{ "path": "../../flags/tsconfig.json" }, { "path": "../../shared-base/tsconfig.json" }]
