--- a/tsconfig.leaf.json
+++ b/tsconfig.leaf.json
@@ -1,3 +1,16 @@
 {
-  "extends": ["./tsconfig.json", "./packages/config/tsconfig.leaf.json"]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    // Classification follows https://www.typescriptlang.org/tsconfig
+
+    // Emit
+    "noEmit": true,
+    "emitDeclarationOnly": false,
+    "declaration": false,
+    "declarationMap": false,
+    "sourceMap": false,
+
+    // Projects
+    "composite": false
+  }
 }
