--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@masknet/eslint-plugin": "^0.2.0",
     "@nice-labs/git-rev": "^3.5.1",
     "@swc/core": "1.3.96",
+    "@tanstack/eslint-plugin-query": "4.36.1",
     "@types/lodash-es": "^4.17.9",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
@@ -117,8 +118,8 @@
         "typescript"
       ],
       "allowedVersions": {
-        "react": "0.0.0-experimental-0a360642d-20230711",
-        "react-dom": "0.0.0-experimental-0a360642d-20230711",
+        "react": "0.0.0-experimental-8039e6d0b-20231026",
+        "react-dom": "0.0.0-experimental-8039e6d0b-20231026",
         "typescript": "5",
         "rollup": "3"
       }
