--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "prettier": "^3.1.0",
     "svgo": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.3.0-beta",
+    "typescript": "5.3.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
   },
