--- a/packages/web3-hooks/base/package.json
+++ b/packages/web3-hooks/base/package.json
@@ -21,6 +21,7 @@
     "@masknet/web3-shared-flow": "workspace:^",
     "@masknet/web3-shared-solana": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
+    "@tanstack/react-query": "^5.8.4",
     "@types/ethereum-blockies": "^0.1.0",
     "@types/use-subscription": "^1.0.0",
     "bignumber.js": "9.1.2",
