chore: add react-query serialize and persist with chrome extension api

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -75,6 +75,9 @@
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.4",
         "@tailwindcss/typography": "^0.5.9",
+        "@tanstack/query-broadcast-client-experimental": "^5.8.7",
+        "@tanstack/query-sync-storage-persister": "^5.8.7",
+        "@tanstack/react-query-persist-client": "^5.8.7",
         "async-call-rpc": "^6.3.1",
         "autoprefixer": "^10.4.14",
         "cross-env": "^7.0.3",
