refactor: remove side effects in flags

--- a/packages/flags/package.json
+++ b/packages/flags/package.json
@@ -2,7 +2,7 @@
     "name": "@masknet/flags",
     "version": "0.0.0",
     "private": true,
-    "sideEffects": ["./src/index.ts"],
+    "sideEffects": false,
     "type": "module",
     "exports": {
       ".": {
