refactor: improve mask sdk connect

--- a/packages/mask-sdk/package.json
+++ b/packages/mask-sdk/package.json
@@ -2,7 +2,9 @@
   "name": "@masknet/sdk",
   "version": "0.0.0",
   "private": true,
-  "sideEffects": ["./server/index.ts"],
+  "sideEffects": [
+    "./server/index.ts"
+  ],
   "type": "module",
   "exports": {
     ".": {
@@ -16,12 +18,10 @@
     "build": "rollup -c",
     "start": "rollup -c -w"
   },
-  "dependencies": {
-    "async-call-rpc": "^6.3.1"
-  },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-image": "^3.0.2",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "async-call-rpc": "^6.3.1",
     "rollup": "^3.28.1",
     "rollup-plugin-swc3": "^0.10.1"
   }
