feat: add raw display to personal sign

--- a/packages/mask/entry-sdk/tsconfig.json
+++ b/packages/mask/entry-sdk/tsconfig.json
@@ -11,6 +11,7 @@
     { "path": "../utils-pure/tsconfig.json" },
     { "path": "../../mask-sdk/server/tsconfig.json" },
     { "path": "../../web3-shared/evm/tsconfig.json" },
-    { "path": "../../shared-base/tsconfig.json" }
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" }
   ]
 }
