chore: patch @tanstack/query-async-storage-persister to fix performance problem

--- a/package.json
+++ b/package.json
@@ -146,7 +146,8 @@
       "@splinetool/runtime@0.9.342": "patches/@splinetool__runtime@0.9.342.patch",
       "web3-core@1.10.2": "patches/web3-core@1.10.2.patch",
       "eslint-plugin-i@2.28.1": "patches/eslint-plugin-i@2.28.1.patch",
-      "react-devtools-inline@4.28.5": "patches/react-devtools-inline@4.28.5.patch"
+      "react-devtools-inline@4.28.5": "patches/react-devtools-inline@4.28.5.patch",
+      "@tanstack/query-async-storage-persister@5.8.7": "patches/@tanstack__query-async-storage-persister@5.8.7.patch"
     }
   }
 }
