--- a/packages/plugins/Collectible/package.json
+++ b/packages/plugins/Collectible/package.json
@@ -25,14 +25,16 @@
     "@masknet/typed-message": "workspace:^0.2.0",
     "@masknet/web3-helpers": "workspace:^",
     "@masknet/web3-hooks-base": "workspace:^",
+    "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
     "@masknet/web3-shared-solana": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
+    "@types/use-subscription": "^1.0.0",
     "bignumber.js": "9.1.2",
     "date-fns": "^2.30.0",
+    "unstated-next": "^1.1.0",
     "use-subscription": "^1.8.0",
-    "@types/use-subscription": "^1.0.0",
-    "unstated-next": "^1.1.0"
+    "web3-utils": "1.10.2"
   }
 }
