--- a/packages/plugins/RedPacket/package.json
+++ b/packages/plugins/RedPacket/package.json
@@ -31,13 +31,11 @@
     "@masknet/web3-shared-evm": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
     "@react-hookz/web": "^23.1.0",
+    "@tanstack/react-query": "^5.8.7",
     "bignumber.js": "9.1.2",
     "date-fns": "^2.30.0",
     "react-use": "^17.4.0",
     "web3-core": "1.10.2",
     "web3-utils": "1.10.2"
-  },
-  "peerDependencies": {
-    "@tanstack/react-query": "^5.8.7"
   }
 }
