--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@mui/system": "5.10.8",
     "@tanstack/react-query": "^5.8.7",
     "@types/masknet__global-types": "workspace:^",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.115",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.135",
     "i18next": "^23.2.11",
     "knip": "^2.33.3",
     "lodash-es": "^4.17.21",
@@ -63,7 +63,7 @@
     "@masknet/config": "workspace:^",
     "@masknet/eslint-plugin": "^0.2.0",
     "@nice-labs/git-rev": "^3.5.1",
-    "@swc/core": "1.3.96",
+    "@swc/core": "1.3.106",
     "@tanstack/eslint-plugin-query": "5.8.4",
     "@types/lodash-es": "^4.17.9",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
@@ -86,14 +86,14 @@
     "prettier": "^3.1.0",
     "svgo": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.3.0-beta",
+    "typescript": "5.3.3",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
   },
   "pnpm": {
     "overrides": {
-      "@types/node": "20.5.7",
-      "@types/react": "18.2.21",
+      "@types/node": "20.11.9",
+      "@types/react": "18.2.48",
       "cross-blob": "3.0.1",
       "i18next-translation-parser>html-parse-stringify2": "github:locize/html-parse-stringify2#d463109433b2c49c74a081044f54b2a6a1ccad7c",
       "web3@0.20.7>bignumber.js": "git+https://github.com/frozeman/bignumber.js-nolookahead.git#57692b3ecfc98bbdd6b3a516cb2353652ea49934",
