--- a/packages/plugins/Approval/package.json
+++ b/packages/plugins/Approval/package.json
@@ -26,7 +26,6 @@
     "@masknet/web3-shared-evm": "workspace:^",
     "@masknet/web3-providers": "workspace:^",
     "@masknet/theme": "workspace:^",
-    "@masknet/web3-telemetry": "workspace:^",
-    "react-use": "^17.4.0"
+    "@masknet/web3-telemetry": "workspace:^"
   }
 }
