--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -69,9 +69,11 @@
     "fuse.js": "6.6.2",
     "graphql-request": "^6.0.0",
     "immer": "^10.0.2",
+    "lodash-es": "^4.17.21",
     "lru-cache": "^10.0.0",
     "rss3-next": "^0.6.17",
     "socket.io-client": "2.4.0",
+    "tiny-async-pool": "^2.1.0",
     "twitter-text": "^3.1.0",
     "urlcat": "^3.1.0",
     "uuid": "^9.0.0",
@@ -85,6 +87,7 @@
     "@types/bn.js": "^4.11.6",
     "@types/bs58": "^4.0.1",
     "@types/socket.io-client": "^1.4.36",
+    "@types/tiny-async-pool": "^2.0.3",
     "@types/twitter-text": "^3.1.7",
     "@types/use-subscription": "^1.0.0",
     "@types/uuid": "^9.0.3"
