--- a/.github/workflows/jira-issue-key-checking.yml
+++ b/.github/workflows/jira-issue-key-checking.yml
@@ -20,4 +20,4 @@ jobs:
         if: ${{ github.event.pull_request  }}
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          jira-prefix: 'MF'
+          jira-prefix: 'MF|FW'
