--- a/packages/plugins/Calendar/package.json
+++ b/packages/plugins/Calendar/package.json
@@ -23,6 +23,7 @@
         "@masknet/shared-base-ui": "workspace:^",
         "@masknet/theme": "workspace:^",
         "@masknet/web3-providers": "workspace:^",
+        "@masknet/web3-shared-base": "workspace:^",
         "date-fns": "^2.30.0"
     }
 }
