--- a/packages/mask/.webpack/manifest/manifest.json
+++ b/packages/mask/.webpack/manifest/manifest.json
@@ -2,7 +2,7 @@
     "name": "Mask Network",
     "version": "0",
     "manifest_version": 2,
-    "permissions": ["storage", "downloads", "webNavigation", "activeTab"],
+    "permissions": ["storage", "webNavigation", "activeTab"],
     "optional_permissions": ["<all_urls>", "notifications", "clipboardRead"],
     "background": { "page": "background.html" },
     "options_ui": { "page": "dashboard.html", "open_in_tab": true },
