--- a/package.json
+++ b/package.json
@@ -66,19 +66,17 @@
     "@swc/core": "1.3.106",
     "@tanstack/eslint-plugin-query": "5.8.4",
     "@types/lodash-es": "^4.17.9",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
     "@vitest/ui": "^0.34.3",
     "cross-fetch": "^4.0.0",
     "cspell": "^7.2.0",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-i": "^2.28.1",
+    "eslint-plugin-i": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tss-unused-classes": "^1.0.1",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-tss-unused-classes": "^1.0.2",
+    "eslint-plugin-unicorn": "^51.0.1",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "gulp": "^4.0.2",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
@@ -87,6 +85,7 @@
     "svgo": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "5.3.3",
+    "typescript-eslint": "^7.0.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
   },
@@ -145,9 +144,9 @@
       "@protobufjs/inquire@1.1.0": "patches/@protobufjs__inquire@1.1.0.patch",
       "@splinetool/runtime@0.9.342": "patches/@splinetool__runtime@0.9.342.patch",
       "web3-core@1.10.2": "patches/web3-core@1.10.2.patch",
-      "eslint-plugin-i@2.28.1": "patches/eslint-plugin-i@2.28.1.patch",
       "react-devtools-inline@4.28.5": "patches/react-devtools-inline@4.28.5.patch",
-      "@tanstack/query-async-storage-persister@5.8.7": "patches/@tanstack__query-async-storage-persister@5.8.7.patch"
+      "@tanstack/query-async-storage-persister@5.8.7": "patches/@tanstack__query-async-storage-persister@5.8.7.patch",
+      "eslint-plugin-i@2.29.1": "patches/eslint-plugin-i@2.29.1.patch"
     }
   }
 }
