chore: upgrade node to 21

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "eslint.experimental.useFlatConfig": true,
     "typescript.tsdk": "node_modules/typescript/lib",
     "typescript.preferences.importModuleSpecifierEnding": "js",
+    "js/ts.implicitProjectConfig.module": "NodeNext",
+    "js/ts.implicitProjectConfig.target": "ESNext",
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "file",
     "explorer.fileNesting.patterns": {
