--- a/packages/plugins/Trader/package.json
+++ b/packages/plugins/Trader/package.json
@@ -16,6 +16,8 @@
     }
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
+    "@lifi/widget": "^2.10.1",
     "@masknet/icons": "workspace:^",
     "@masknet/plugin-go-plus-security": "workspace:^",
     "@masknet/plugin-infra": "workspace:^",
