fix: some wallet issues (#11504)
* fix: mf-6103 remove Ronin wallet

* fix: mf-6101 add trust config

* fix: mf-6090 distinguish between okx and phantom

* fix: mf-6101 add TokenPocket wallet

--- a/packages/injected-script/sdk/tsconfig.json
+++ b/packages/injected-script/sdk/tsconfig.json
@@ -19,10 +19,10 @@
     "OneKey.ts",
     "Rabby.ts",
     "Rainbow.ts",
-    "Ronin.ts",
     "Opera.ts",
     "Clover.ts",
     "Trust.ts",
+    "TokenPocket.ts",
     "Zerion.ts",
     "utils.ts"
   ],
