--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -36,6 +36,8 @@
     "@dimensiondev/mask-wallet-core": "0.1.0-20211013082857-eb62e5f",
     "@ethereumjs/util": "^8.0.5",
     "@hookform/resolvers": "^3.1.1",
+    "@lifi/widget": "^2.10.1",
+    "@ethersproject/providers": "^5.7.2",
     "@masknet/backup-format": "workspace:^",
     "@masknet/encryption": "workspace:^",
     "@masknet/flags": "workspace:^",
