--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -120,6 +120,7 @@
     "elliptic": "^6.5.4",
     "event-iterator": "^2.0.0",
     "file-loader": "^6.2.0",
+    "fuse.js": "^7.0.0",
     "guess-calling-code": "^1.1.8",
     "html-to-image": "^1.11.11",
     "https-browserify": "^1.0.0",
