--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -38,7 +38,7 @@
     "bignumber.js": "9.1.2",
     "d3": "^5.16.0",
     "date-fns": "^2.30.0",
-    "fuse.js": "6.6.2",
+    "fuse.js": "^7.0.0",
     "immer": "^10.0.2",
     "json-stable-stringify": "^1.0.2",
     "lodash-es": "^4.17.21",
