--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -16,7 +16,7 @@
     "@masknet/icons": "workspace:^",
     "@masknet/shared-base": "workspace:^",
     "@types/tinycolor2": "^1.4.3",
-    "fuse.js": "6.6.2",
+    "fuse.js": "^7.0.0",
     "notistack": "2.0.8",
     "react-use": "^17.4.0",
     "react-window": "^1.8.9",
