--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -66,7 +66,7 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "fortmatic": "^2.2.1",
-    "fuse.js": "6.6.2",
+    "fuse.js": "^7.0.0",
     "graphql-request": "^6.0.0",
     "immer": "^10.0.2",
     "lru-cache": "^10.0.0",
