--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@mui/lab": "5.0.0-alpha.167",
     "@mui/material": "5.15.12",
     "@mui/system": "5.15.12",
-    "@tanstack/react-query": "^5.8.7",
+    "@tanstack/react-query": "^5.29.2",
     "@types/masknet__global-types": "workspace:^",
     "@types/react": "18.2.48",
     "@types/react-dom": "^18.2.18",
@@ -64,7 +64,7 @@
     "@masknet/eslint-plugin": "^0.2.0",
     "@nice-labs/git-rev": "^3.5.1",
     "@swc/core": "1.3.106",
-    "@tanstack/eslint-plugin-query": "5.8.4",
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/lodash-es": "^4.17.9",
     "@vitest/ui": "^0.34.3",
     "cross-fetch": "^4.0.0",
@@ -99,7 +99,7 @@
       "@protobufjs/inquire": "1.1.0",
       "reflect-metadata": "0.1.13",
       "webpack@5": "Jack-Works/webpack#528c91e564d5756e21c9c462b607d913452af770",
-      "@tanstack/react-query": "^5.8.7",
+      "@tanstack/react-query": "^5.29.2",
       "@lifi/widget": "^2.10.1"
     },
     "override comments": {
@@ -143,7 +143,6 @@
       "@splinetool/runtime@0.9.342": "patches/@splinetool__runtime@0.9.342.patch",
       "web3-core@1.10.2": "patches/web3-core@1.10.2.patch",
       "react-devtools-inline@4.28.5": "patches/react-devtools-inline@4.28.5.patch",
-      "@tanstack/query-async-storage-persister@5.8.7": "patches/@tanstack__query-async-storage-persister@5.8.7.patch",
       "eslint-plugin-i@2.29.1": "patches/eslint-plugin-i@2.29.1.patch",
       "@mui/material@5.15.12": "patches/@mui__material@5.15.12.patch",
       "@lifi/widget@2.10.1": "patches/@lifi__widget@2.10.1.patch",
