--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mask-network",
   "type": "module",
-  "packageManager": "pnpm@8.7.6",
+  "packageManager": "pnpm@8.15.7+sha256.50783dd0fa303852de2dd1557cd4b9f07cb5b018154a6e76d0f40635d6cee019",
   "engines": {
     "node": ">=21.2.0",
     "pnpm": ">=8.6.0",
