--- a/packages/web3-contracts/package.json
+++ b/packages/web3-contracts/package.json
@@ -2,9 +2,9 @@
   "name": "@masknet/web3-contracts",
   "private": true,
   "sideEffects": false,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "start": "ts-node compile-contracts.ts"
+    "start": "node --import @swc-node/register/esm-register compile-contracts.ts"
   },
   "dependencies": {
     "@typechain/web3-v1": "^6.0.2",
