--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "packageManager": "pnpm@8.7.6",
   "engines": {
-    "node": ">=21.2.0",
+    "node": ">=20.11.1",
     "pnpm": ">=8.6.0",
     "yarn": ">=999.0.0",
     "npm": ">=999.0.0"
@@ -63,6 +63,7 @@
     "@masknet/config": "workspace:^",
     "@masknet/eslint-plugin": "^0.2.0",
     "@nice-labs/git-rev": "^3.5.1",
+    "@swc-node/register": "^1.9.0",
     "@swc/core": "1.3.106",
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/lodash-es": "^4.17.9",
@@ -83,7 +84,6 @@
     "msw": "^1.2.1",
     "prettier": "^3.1.0",
     "svgo": "^3.0.2",
-    "ts-node": "^10.9.1",
     "typescript": "5.4.2",
     "typescript-eslint": "^7.1.1",
     "vite": "^4.5.0",
@@ -126,7 +126,6 @@
     },
     "patchedDependencies": {
       "@ceramicnetwork/rpc-transport@0.3.1": "patches/@ceramicnetwork__rpc-transport@0.3.1.patch",
-      "gulp@4.0.2": "patches/gulp@4.0.2.patch",
       "micromark@3.1.0": "patches/micromark@3.1.0.patch",
       "micromark-util-symbol@1.0.1": "patches/micromark-util-symbol@1.0.1.patch",
       "@types/react-avatar-editor@13.0.0": "patches/@types__react-avatar-editor@13.0.0.patch",
@@ -147,7 +146,8 @@
       "@mui/material@5.15.12": "patches/@mui__material@5.15.12.patch",
       "@lifi/widget@2.10.1": "patches/@lifi__widget@2.10.1.patch",
       "@mui/base@5.0.0-beta.38": "patches/@mui__base@5.0.0-beta.38.patch",
-      "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch"
+      "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch",
+      "gulp@4.0.2": "patches/gulp@4.0.2.patch"
     }
   }
 }
