--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -55,6 +55,10 @@ jobs:
       - run: git config --global url."https://github.com/".insteadOf git@github.com
       - run: pnpm install
       - run: npx gulp build-ci
+      # See https://github.com/getsentry/action-release/issues/187
+      - name: Change git configuration
+        shell: bash
+        run: git config --unset-all extensions.worktreeconfig
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         if: github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/released'
