--- a/package.json
+++ b/package.json
@@ -147,7 +147,8 @@
       "@lifi/widget@2.10.1": "patches/@lifi__widget@2.10.1.patch",
       "@mui/base@5.0.0-beta.38": "patches/@mui__base@5.0.0-beta.38.patch",
       "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch",
-      "gulp@4.0.2": "patches/gulp@4.0.2.patch"
+      "gulp@4.0.2": "patches/gulp@4.0.2.patch",
+      "react-use@17.4.0": "patches/react-use@17.4.0.patch"
     }
   }
 }
