--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -37,8 +37,7 @@ jobs:
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v3
         with:
-          # Keep consistent between node version in the .node-version file and below.
-          node-version: "21"
+          node-version-file: ".node-version"
           cache: 'pnpm'
       - name: Authenticate NPM
         uses: DimensionDev/github-token-action@latest
