--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v3
         with:
-          node-version: "21"
+          node-version-file: ".node-version"
           cache: "pnpm"
       - name: Authenticate NPM
         uses: DimensionDev/github-token-action@latest
