--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/masknet__global-types": "workspace:^",
     "@types/react": "18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.141",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.143",
     "i18next": "^23.2.11",
     "knip": "^2.33.3",
     "lodash-es": "^4.17.21",
@@ -84,14 +84,14 @@
     "msw": "^1.2.1",
     "prettier": "^3.1.0",
     "svgo": "^3.0.2",
-    "typescript": "5.4.2",
+    "typescript": "5.5.0-beta",
     "typescript-eslint": "^7.1.1",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
   },
   "pnpm": {
     "overrides": {
-      "@types/node": "20.11.9",
+      "@types/node": "20.12.7",
       "@types/react": "18.2.48",
       "cross-blob": "3.0.1",
       "i18next-translation-parser>html-parse-stringify2": "github:locize/html-parse-stringify2#d463109433b2c49c74a081044f54b2a6a1ccad7c",
