--- a/packages/mask/background/tsconfig.json
+++ b/packages/mask/background/tsconfig.json
@@ -4,6 +4,7 @@
     "rootDir": "./",
     "outDir": "../dist/background/",
     "tsBuildInfoFile": "../dist/background.tsbuildinfo",
+    "isolatedDeclarations": true,
     // MV3 = WebWorker, MV2 = DOM
     // but we cannot build the same code in two env
     "lib": ["ES2022", "WebWorker", "DOM.Iterable"]
