--- a/packages/plugins/Trader/package.json
+++ b/packages/plugins/Trader/package.json
@@ -19,30 +19,20 @@
     "@ethersproject/providers": "^5.7.2",
     "@lifi/widget": "^2.10.1",
     "@masknet/icons": "workspace:^",
-    "@masknet/plugin-go-plus-security": "workspace:^",
     "@masknet/plugin-infra": "workspace:^",
     "@masknet/plugin-transak": "workspace:^",
-    "@masknet/public-api": "workspace:^",
     "@masknet/shared": "workspace:^",
     "@masknet/shared-base": "workspace:^",
     "@masknet/shared-base-ui": "workspace:^",
     "@masknet/theme": "workspace:^",
-    "@masknet/web3-contracts": "workspace:^",
     "@masknet/web3-helpers": "workspace:^",
     "@masknet/web3-hooks-base": "workspace:^",
-    "@masknet/web3-hooks-evm": "workspace:^",
     "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
     "@masknet/web3-shared-solana": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
-    "@types/json-stable-stringify": "^1.0.34",
-    "bignumber.js": "9.1.2",
     "date-fns": "^2.30.0",
-    "json-stable-stringify": "^1.0.2",
-    "react-use": "^17.4.0",
-    "unstated-next": "^1.1.0",
-    "urlcat": "^3.1.0",
-    "web3-utils": "1.10.2"
+    "react-use": "^17.4.0"
   }
 }
