--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -24,6 +24,8 @@ jobs:
     env:
       WEB3_CONSTANTS_RPC: ${{ secrets.WEB3_CONSTANTS_RPC }}
       MASK_SENTRY_DSN: ${{ secrets.MASK_SENTRY_DSN }}
+      MASK_SENTRY: ${{ secrets.MASK_SENTRY }}
+      MASK_MIXPANEL: ${{ secrets.MASK_MIXPANEL }}
     steps:
       - name: Get cache date
         id: get-date
