--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -117,6 +117,7 @@
     "color": "^4.2.3",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
+    "eip-712": "^1.0.0",
     "elliptic": "^6.5.4",
     "event-iterator": "^2.0.0",
     "file-loader": "^6.2.0",
