--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -5,6 +5,7 @@
   "sideEffects": ["./runtime/*.js"],
   "type": "module",
   "scripts": {
+    "start": "rollup -w -c ./config.js",
     "build": "rollup -c"
   },
   "dependencies": {
@@ -14,15 +15,14 @@
     "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-virtual": "^3.0.2",
     "@types/node": "20.12.7",
     "core-js-compat": "3.37.0",
     "regenerator-runtime": "^0.14.0",
-    "rollup": "^3.28.1",
-    "rollup-plugin-swc3": "^0.10.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^4.17.2",
+    "rollup-plugin-swc3": "^0.11.2"
   }
 }
