--- a/packages/sentry/package.json
+++ b/packages/sentry/package.json
@@ -2,17 +2,19 @@
   "name": "@masknet/sentry-wrapper",
   "sideEffects": false,
   "dependencies": {
-    "@sentry/browser": "7.66.0"
+    "@sentry/browser": "8.0.0"
   },
   "private": true,
   "type": "module",
   "main": "./dist/sentry.js",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-replace": "^5.0.2",
-    "rollup": "^3.28.1"
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
+    "rollup": "^4.17.2",
+    "rollup-plugin-swc3": "^0.11.2"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js"
+    "start": "rollup -c -w",
+    "build": "rollup -c"
   }
 }
