--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "eslint-plugin-tss-unused-classes": "^1.0.2",
     "eslint-plugin-unicorn": "^51.0.1",
     "eslint-plugin-unused-imports": "^3.1.0",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "msw": "^1.2.1",
@@ -147,8 +147,8 @@
       "@lifi/widget@2.10.1": "patches/@lifi__widget@2.10.1.patch",
       "@mui/base@5.0.0-beta.38": "patches/@mui__base@5.0.0-beta.38.patch",
       "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch",
-      "gulp@4.0.2": "patches/gulp@4.0.2.patch",
-      "react-use@17.4.0": "patches/react-use@17.4.0.patch"
+      "react-use@17.4.0": "patches/react-use@17.4.0.patch",
+      "gulp@5.0.0": "patches/gulp@5.0.0.patch"
     }
   }
 }
